updated README, version

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,4 +6,4 @@ projectName = readable
 appName = no.bouvet.exp.readable
 displayName = Readable
 xpVersion = 6.10.3
-version = 1.0.0-SNAPSHOT
+version = 1.0.1
