--- a/src/main/resources/lib/syllable/package.json
+++ b/src/main/resources/lib/syllable/package.json
@@ -65,7 +65,7 @@
   ],
   "dependencies": {
     "normalize-strings": "^1.1.0",
-    "pluralize": "^6.0.0",
+//    "pluralize": "^6.0.0",
     "trim": "0.0.1"
   },
   "description": "Count syllables in English words",
